# deep-learning-course-notebooks

./: pyproject.toml
notebooks/: README.md  notebook_0.ipynb  notebook_1.ipynb  notebook_2.ipynb
